feat: Move to spring boot
* Actually, spring boot is pretty nice...